[tool.poetry]
name = "julia-kmeans1d"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jl_kmeans1d"}]

[tool.poetry.dependencies]
python = "^3.7"
julia-numpy = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
